--- a/mall-apollo-admin/src/main/resources/application.yml
+++ b/mall-apollo-admin/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8080
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   datasource:
     url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
     username: root
@@ -31,7 +34,6 @@ redis:
   key:
     prefix:
       admin: 'ums:admin'
-
 upload:
   mode: minio
   minio:
@@ -40,3 +42,8 @@ upload:
     access-key: minio_admin
     secret-key: Terrissminio03
     bucket-name: mall-apollo
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
