--- a/mall-apollo-auth/src/main/resources/application.yml
+++ b/mall-apollo-auth/src/main/resources/application.yml
@@ -4,3 +4,8 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
